--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+	<meta charset="utf-8">
+	<title>HTML Academy: Техномарт</title>
+</head>
 
-  </body>
+<body>
+	<header>
+		<div class="header-top">
+			<a class="logo" href="#">техномарт</a>
+			<input type="text" name="main-search" value="Поиск:">
+			<button class="header-top-btn btn-bookmarks">Закладки: 0</button>
+			<button class="header-top-btn btn-cart">Корзина: 0</button>
+			<button class="header-top-btn btn-order">Оформить заказ</button>
+		</div>
+		<div class="header-mid">
+			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+			<div class="header-contacts">
+				<a class="header-tel" href="tel:+78125550555">+7 (812) 555-05-55
+				</a>
+				<p class="header-adress">
+					г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+				</p>
+			</div>
+			<ul class="user-menu">
+				<li><a class="login-enter" href="#">Войти</a></li>
+				<li><a class="login-reg" href="#">Регистрация</a></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+		<div class="header-bot">
+			<nav class="main-nav">
+				<ul>
+					<li class="main-nav-item"><a href="#">Главная</a></li>
+					<li class="main-nav-item"><a href="#">Каталог</a></li>
+					<li class="main-nav-item"><a href="#">Компания</a></li>
+					<li class="main-nav-item"><a href="#">Новости</a></li>
+					<li class="main-nav-item"><a href="#">Спецпредложения</a></li>
+					<li class="main-nav-item"><a href="#">Доставка</a></li>
+					<li class="main-nav-item"><a href="#">Контакты</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
+
 </html>
