index full marked
need to add a classes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			</ul>
 		</div>
 		<div class="header-bot">
+			<h2 class="visualy-hidden">Навигация по сайту</h2>
 			<nav class="main-nav">
 				<ul>
 					<li class="main-nav-item"><a href="#">Главная</a></li>
@@ -45,6 +46,187 @@
 			</nav>
 		</div>
 	</header>
+	<main>
+		<h2 class="visualy-hidden">Категории товаров</h2>
+		<section class="categories">
+			<ul class="categories-list">
+				<li class="categories-item">
+					<h3>Материалы</h3>
+					<a href="" class="categories-item-btn"></a>
+					<div class="categories-icon"></div>
+					<div class="label"></div>
+				</li>
+				<li class="categories-item">
+					<h3>Инструмент</h3>
+					<a href="" class="categories-item-btn"></a>
+					<div class="categories-icon"></div>
+					<div class="label"></div>
+				</li>
+				<li class="categories-item">
+					<h3>Техника</h3>
+					<a href="" class="categories-item-btn"></a>
+					<div class="categories-icon"></div>
+					<div class="label"></div>
+				</li>
+				<li class="categories-item">
+					<h3>Скидки 50%</h3>
+					<a href="" class="categories-item-btn"></a>
+					<div class="categories-icon"></div>
+					<div class="label"></div>
+				</li>
+				<li class="categories-item">
+					<h3>Доставка</h3>
+					<a href="" class="categories-item-btn"></a>
+					<div class="categories-icon"></div>
+					<div class="label"></div>
+				</li>
+			</ul>
+			<div class="categories-slider"></div>
+		</section>
+		<section class="popular-goods">
+			<h2 class="visualy-hidden">Популярные товары</h2>
+			<p>
+				<b>популярные товары:</b>
+				<button class="popular-goods-all">все популярные товары</button>
+			</p>
+			<ul class="popular-goods-list">
+				<li class="popular-goods-item">
+					<img src="http://placehold.it/150x100" alt="BFG 9000">
+					<h3>Перворатор BOSCH 9000</h3>
+					<span class="old-price">32500 р.</span>
+					<button class="popular-goods-btn"></button>
+				</li>
+				<li class="popular-goods-item">
+					<img src="http://placehold.it/150x100" alt="BFG 3000">
+					<h3>Перворатор BOSCH 3000</h3>
+					<span class="old-price">22500 р.</span>
+					<button class="popular-goods-btn"></button>
+				</li>
+				<li class="popular-goods-item">
+					<img src="http://placehold.it/150x100" alt="BFG 6000">
+					<h3>Перворатор BOSCH 6000</h3>
+					<span class="old-price">30500 р.</span>
+					<button class="popular-goods-btn"></button>
+				</li>
+				<li class="popular-goods-item">
+					<img src="http://placehold.it/150x100" alt="BFG 2000">
+					<h3>Перворатор BOSCH 2000</h3>
+					<span class="old-price"></span>
+					<button class="popular-goods-btn"></button>
+				</li>
+			</ul>
+		</section>
+		<section class="popular-brands">
+			<h2 class="visualy-hidden">популярные производители</h2>
+			<p>
+				<b>популярные производители:</b>
+				<button class="popular-brands-all">все производители</button>
+			</p>
+			<div class="popular-brands-list">
+				<li class="popular-brands-item">
+					<a href=""><img src="http://placehold.it/150x100" alt="BOSCH"></a>
+				</li>
+				<li class="popular-brands-item">
+					<a href=""><img src="http://placehold.it/150x100" alt="Makita"></a>
+				</li>
+				<li class="popular-brands-item">
+					<a href=""><img src="http://placehold.it/150x100" alt="DeWalt"></a>
+				</li>
+				<li class="popular-brands-item">
+					<a href=""><img src="http://placehold.it/150x100" alt="ИНТЕРСКОЛ"></a>
+				</li>
+				<li class="popular-brands-item">
+					<a href=""><img src="http://placehold.it/150x100" alt="HITACHI"></a>
+				</li>
+				<li class="popular-brands-item">
+					<a href=""><img src="http://placehold.it/150x100" alt="LG"></a>
+				</li>
+				<li class="popular-brands-item">
+					<a href=""><img src="http://placehold.it/150x100" alt="AEG"></a>
+				</li>
+				<li class="popular-brands-item">
+					<a href=""><img src="http://placehold.it/150x100" alt="Metabo"></a>
+				</li>
+			</div>
+		</section>
+		<section class="service">
+			<h2>сервисы</h2>
+			<p class="service-title">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+			<div class="service-slider">
+				<button class="service-btn service-btn-delivery">Доставка</button>
+				<button class="service-btn service-btn-delivery">Гарантия</button>
+				<button class="service-btn service-btn-delivery">Кредит</button>
+				<div class="service-slider-description service-slider-delivery">
+					<span>доставка</span>
+					<p>Мы с удовольствием доставим ваш товар прямо
+						к вашему подъезду совершенно бесплатно!
+						Ведь мы неплохо заработаем, поднимая его на ваш этаж! </p>
+				</div>
+				<div class="service-slider-description service-slider-guarantee">
+					<span>гарантия</span>
+					<p>Если купленный у нас товар поломается или заискрит,
+						а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
+						Дом уж восстановите как-нибудь сами. </p>
+				</div>
+				<div class="service-slider-description service-slider-credit">
+					<span>кредит</span>
+					<p>Залезть в долговую яму стало проще!
+						Кредитные консультанты придут вам на помощь.</p>
+				</div>
+			</div>
+		</section>
+		<section class="about-us">
+			<div class="about-company">
+				<span>компания "техномарт"</span>
+				<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+					Мы можем доставить ваш товар в самые отдаленные точки России!
+					Техномарт работает со многими транспортными компаниями: </p>
+				<ul class="partners-list">
+					<li class="partners-item">Деловые линии</li>
+					<li class="partners-item">Автотрейдинг</li>
+					<li class="partners-item">ЖелДорЭкспедиция</li>
+				</ul>
+				<button>подробнее о компании</button>
+			</div>
+			<div class="about-contacts">
+				<span>контакты</span>
+				<p>Вы можете забрать товар сами, заехав в наш офис:</p>
+				<div class="about-map"><a href="#"></a></div>
+				<button>заблудились? напишите нам</button>
+			</div>
+		</section>
+		<footer>
+			<div class="footer-top">
+				<div>
+					<a class="footer-logo" href=""></a>
+					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+				</div>
+				<nav class="footer-nav">
+					<ul>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="footer-bot">
+				<p class="copyright">2010-2019 Компания "Техномарт"<br>Все права защищены</p>
+				<p class="footer-socials">
+					<a href="#" title="ВКонтакте"></a>
+					<a href="#" title="Facebook"></a>
+					<a href="#" title="Instagram"></a>
+				</p>
+				<p class="footer-mail">Обратная связь:<br> <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+				<p class="footer-academy">Разработано -<br><a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+			</div>
+		</footer>
+	</main>
 </body>
 
 </html>
