--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 				<li><a class="login-enter" href="#">Войти</a></li>
 				<li><a class="login-reg" href="#">Регистрация</a></li>
 				<li></li>
-				<li></li>
 			</ul>
 		</div>
 		<div class="header-bot">
@@ -203,15 +202,15 @@
 				</div>
 				<nav class="footer-nav">
 					<ul>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
+						<li><a href="">Компания</a></li>
+						<li><a href="">Новости</a></li>
+						<li><a href="">Каталог</a></li>
+						<li><a href="">Доставка</a></li>
+						<li><a href="">Контакты</a></li>
+						<li><a href="">Материалы</a></li>
+						<li><a href="">Техника</a></li>
+						<li><a href="">Инструмент</a></li>
+						<li><a href="">Спецпредложения</a></li>
 					</ul>
 				</nav>
 			</div>
