Fixes for first markup
where it needs buttons to anchors
visually hidden inside section
categories in two blocks for flex
red-btn class
deleted "new" and div for icon
slider buttons to input radio
header and main added
span for icon in breadcrumbs
old-price -> goods-old-price

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<div class="header-top">
 			<a class="logo" href="#">техномарт</a>
 			<input type="text" name="main-search" value="Поиск:">
-			<button class="header-top-btn btn-bookmarks">Закладки: 0</button>
-			<button class="header-top-btn btn-cart">Корзина: 0</button>
-			<button class="header-top-btn btn-order">Оформить заказ</button>
+			<a class="header-top-btn btn-bookmarks" href="#">Закладки: 0</a>
+			<a class="header-top-btn btn-cart" href="#">Корзина: 0</a>
+			<a class="header-top-btn btn-order" href="#">Оформить заказ</a>
 		</div>
 		<div class="header-mid">
 			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
@@ -27,11 +27,9 @@
 			<ul class="user-menu">
 				<li><a class="login-enter" href="#">Войти</a></li>
 				<li><a class="login-reg" href="#">Регистрация</a></li>
-				<li></li>
 			</ul>
 		</div>
 		<div class="header-bot">
-			<h2 class="visualy-hidden">Навигация по сайту</h2>
 			<nav class="main-nav">
 				<ul>
 					<li class="main-nav-item"><a href="#">Главная</a></li>
@@ -46,82 +44,74 @@
 		</div>
 	</header>
 	<main>
-		<h2 class="visualy-hidden">Категории товаров</h2>
 		<section class="categories">
-			<ul class="categories-list">
-				<li class="categories-item">
+			<h2 class="visualy-hidden">Категории товаров</h2>
+			<ul class="categories-list-leftcol">
+				<li class="categories-item-materials">
 					<h3>Материалы</h3>
-					<a href="" class="categories-item-btn"></a>
-					<div class="categories-icon"></div>
-					<div class="label"></div>
+					<a href="#" class="categories-item-btn"></a>
 				</li>
-				<li class="categories-item">
+				<li class="categories-item-tools">
 					<h3>Инструмент</h3>
-					<a href="" class="categories-item-btn"></a>
-					<div class="categories-icon"></div>
-					<div class="label"></div>
+					<a href="#" class="categories-item-btn"></a>
 				</li>
-				<li class="categories-item">
+				<li class="categories-slider"></li>
+			</ul>
+			<ul class="categories-list-rightcol">
+				<li class="categories-item-machines">
 					<h3>Техника</h3>
-					<a href="" class="categories-item-btn"></a>
-					<div class="categories-icon"></div>
-					<div class="label"></div>
+					<a href="#" class="categories-item-btn"></a>
 				</li>
-				<li class="categories-item">
+				<li class="categories-item-sale">
 					<h3>Скидки 50%</h3>
-					<a href="" class="categories-item-btn"></a>
-					<div class="categories-icon"></div>
-					<div class="label"></div>
+					<a href="#" class="categories-item-btn"></a>
 				</li>
-				<li class="categories-item">
+				<li class="categories-item-delivery">
 					<h3>Доставка</h3>
-					<a href="" class="categories-item-btn"></a>
-					<div class="categories-icon"></div>
-					<div class="label"></div>
+					<a href="#" class="categories-item-btn"></a>
 				</li>
 			</ul>
-			<div class="categories-slider"></div>
 		</section>
 		<section class="popular-goods">
 			<h2 class="visualy-hidden">Популярные товары</h2>
 			<p>
 				<b>популярные товары:</b>
-				<button class="popular-goods-all">все популярные товары</button>
+				<a class="popular-goods-all red-btn" href="#">все популярные товары</a>
 			</p>
 			<ul class="popular-goods-list">
 				<li class="popular-goods-item">
 					<img src="http://placehold.it/150x100" alt="BFG 9000">
 					<h3>Перворатор BOSCH 9000</h3>
-					<span class="old-price">32500 р.</span>
-					<button class="popular-goods-btn"></button>
+					<span class="goods-old-price">32500 р.</span>
+					<a class="popular-goods-btn red-btn" href="#"></a>
 				</li>
 				<li class="popular-goods-item">
 					<img src="http://placehold.it/150x100" alt="BFG 3000">
 					<h3>Перворатор BOSCH 3000</h3>
-					<span class="old-price">22500 р.</span>
-					<button class="popular-goods-btn"></button>
+					<span class="goods-old-price">22500 р.</span>
+					<a class="popular-goods-btn red-btn" href="#"></a>
 				</li>
 				<li class="popular-goods-item">
 					<img src="http://placehold.it/150x100" alt="BFG 6000">
 					<h3>Перворатор BOSCH 6000</h3>
-					<span class="old-price">30500 р.</span>
-					<button class="popular-goods-btn"></button>
+					<span class="goods-old-price">30500 р.</span>
+					<a class="popular-goods-btn red-btn" href="#"></a>
 				</li>
 				<li class="popular-goods-item">
 					<img src="http://placehold.it/150x100" alt="BFG 2000">
 					<h3>Перворатор BOSCH 2000</h3>
-					<span class="old-price"></span>
-					<button class="popular-goods-btn"></button>
+					<span class="goods-old-price"></span>
+					<a class="popular-goods-btn red-btn" href="#"></a>
 				</li>
 			</ul>
 		</section>
 		<section class="popular-brands">
 			<h2 class="visualy-hidden">популярные производители</h2>
-			<p>
-				<b>популярные производители:</b>
-				<button class="popular-brands-all">все производители</button>
-			</p>
-			<div class="popular-brands-list">
+			<div>
+				<p>популярные производители:</p>
+				<a class="popular-brands-all red-btn" href="#">все производители</a>
+			</div>
+			<ul class="popular-brands-list">
 				<li class="popular-brands-item">
 					<a href=""><img src="http://placehold.it/150x100" alt="BOSCH"></a>
 				</li>
@@ -146,15 +136,15 @@
 				<li class="popular-brands-item">
 					<a href=""><img src="http://placehold.it/150x100" alt="Metabo"></a>
 				</li>
-			</div>
+			</ul>
 		</section>
 		<section class="service">
 			<h2>сервисы</h2>
 			<p class="service-title">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 			<div class="service-slider">
-				<button class="service-btn service-btn-delivery">Доставка</button>
-				<button class="service-btn service-btn-delivery">Гарантия</button>
-				<button class="service-btn service-btn-delivery">Кредит</button>
+				<input class="service-btn service-btn-delivery" type="radio">Доставка</input>
+				<input class="service-btn service-btn-delivery" type="radio">Гарантия</input>
+				<input class="service-btn service-btn-delivery" type="radio">Кредит</input>
 				<div class="service-slider-description service-slider-delivery">
 					<span>доставка</span>
 					<p>Мы с удовольствием доставим ваш товар прямо
@@ -176,7 +166,7 @@
 		</section>
 		<section class="about-us">
 			<div class="about-company">
-				<span>компания "техномарт"</span>
+				<p>компания "техномарт"</p>
 				<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
 					Мы можем доставить ваш товар в самые отдаленные точки России!
 					Техномарт работает со многими транспортными компаниями: </p>
@@ -185,21 +175,20 @@
 					<li class="partners-item">Автотрейдинг</li>
 					<li class="partners-item">ЖелДорЭкспедиция</li>
 				</ul>
-				<button>подробнее о компании</button>
+				<a class="red-btn" href="#">подробнее о компании</a>
 			</div>
 			<div class="about-contacts">
-				<span>контакты</span>
+				<p>контакты</p>
 				<p>Вы можете забрать товар сами, заехав в наш офис:</p>
 				<div class="about-map"><a href="#"></a></div>
-				<button>заблудились? напишите нам</button>
+				<a class="red-btn" href="#">заблудились? напишите нам</a>
 			</div>
 		</section>
-		<footer>
-			<div class="footer-top">
-				<div>
-					<a class="footer-logo" href=""></a>
-					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-				</div>
+	</main>
+	<footer>
+		<div class="footer-top">
+			<div>
+				<a class="footer-logo" href=""></a>
 				<nav class="footer-nav">
 					<ul>
 						<li><a href="">Компания</a></li>
@@ -207,25 +196,28 @@
 						<li><a href="">Каталог</a></li>
 						<li><a href="">Доставка</a></li>
 						<li><a href="">Контакты</a></li>
-						<li><a href="">Материалы</a></li>
-						<li><a href="">Техника</a></li>
-						<li><a href="">Инструмент</a></li>
-						<li><a href="">Спецпредложения</a></li>
 					</ul>
 				</nav>
 			</div>
-			<div class="footer-bot">
-				<p class="copyright">2010-2019 Компания "Техномарт"<br>Все права защищены</p>
-				<p class="footer-socials">
-					<a href="#" title="ВКонтакте"></a>
-					<a href="#" title="Facebook"></a>
-					<a href="#" title="Instagram"></a>
-				</p>
-				<p class="footer-mail">Обратная связь:<br> <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-				<p class="footer-academy">Разработано -<br><a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
-			</div>
-		</footer>
-	</main>
+			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+			<ul class="footer-proposal">
+				<li><a href="">Материалы</a></li>
+				<li><a href="">Техника</a></li>
+				<li><a href="">Инструмент</a></li>
+				<li><a href="">Спецпредложения</a></li>
+			</ul>
+		</div>
+		<div class="footer-bot">
+			<p class="copyright">2010-2019 Компания "Техномарт"<br>Все права защищены</p>
+			<p class="footer-socials">
+				<a href="#" title="ВКонтакте"></a>
+				<a href="#" title="Facebook"></a>
+				<a href="#" title="Instagram"></a>
+			</p>
+			<p class="footer-mail">Обратная связь:<br> <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+			<p class="footer-academy">Разработано -<br><a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+		</div>
+	</footer>
 </body>
 
 </html>
