--- a/catalog.html
+++ b/catalog.html
@@ -11,9 +11,9 @@
         <div class="header-top">
             <a class="logo" href="#">техномарт</a>
             <input type="text" name="main-search" value="Поиск:">
-            <button class="header-top-btn btn-bookmarks">Закладки: 0</button>
-            <button class="header-top-btn btn-cart">Корзина: 10</button>
-            <button class="header-top-btn btn-order">Оформить заказ</button>
+            <a class="header-top-btn btn-bookmarks" href="#">Закладки: 0</a>
+            <a class="header-top-btn btn-cart" href="#">Корзина: 10</a>
+            <a class="header-top-btn btn-order" href="#">Оформить заказ</a>
         </div>
         <div class="header-mid">
             <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
@@ -31,7 +31,6 @@
             </ul>
         </div>
         <div class="header-bot">
-            <h2 class="visualy-hidden">Навигация по сайту</h2>
             <nav class="main-nav">
                 <ul>
                     <li class="main-nav-item"><a href="#">Главная</a></li>
@@ -44,123 +43,114 @@
                 </ul>
             </nav>
         </div>
-            <ul class="breadcrums-main">
-                <li><a href="#"></a></li>
-                <li><a href="#">каталог</a></li>
-                <li><a href="#">инструмент</a></li>
-                <li><a href="#">перфораторы</a></li>
+    </header>
+    <main>
+        <ul class="breadcrumbs-main">
+            <li><a href="#"><span class="breadcrumbs-home"></span></a></li>
+            <li><a href="#">каталог</a></li>
+            <li><a href="#">инструмент</a></li>
+            <li><a>перфораторы</a></li>
+        </ul>
+        <section class="catalog">
+            <h2 class="catalog-name">перфораторы</h2>
+            <div class="catalog-filter">
+                <form action="get">
+                    <strong>фильтр:</strong>
+                    <b>цена:</b>
+                    <input type="range">
+                    <b>производители:</b>
+                    <input type="checkbox">bosch</label>
+                    <input type="checkbox">интерскол</label>
+                    <input type="checkbox">makita</label>
+                    <input type="checkbox">dewalt</label>
+                    <input type="checkbox">hitachi</label>
+                    <b>питание:</b>
+                    <input type="radio" name="radio">аккумуляторные</label>
+                    <input type="radio" name="radio">сетевые</label>
+                    <input type="submit" name="submit" id="submit" value="показать">
+                </form>
+            </div>
+            <div class="catalog-sort"></div>
+            <ul class="catalog-goods">
+                <li class="catalog-item">
+                    <div>
+                        <img src="" alt="" class="catalog-item-img">
+                        <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+                        <span class="goods-old-price">22500 р.</span>
+                        <a class="catalog-item-price red-btn" href="#">15500 р.</a>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="" alt="" class="catalog-item-img">
+                        <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+                        <span class="goods-old-price">30500 р.</span>
+                        <a class="catalog-item-price red-btn" href="#">25500 р.</a>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="" alt="" class="catalog-item-img">
+                        <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+                        <span class="goods-old-price"></span>
+                        <a class="catalog-item-price red-btn" href="#">12500 р.</a>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="" alt="" class="catalog-item-img">
+                        <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+                        <span class="goods-old-price">22500 р.</span>
+                        <a class="catalog-item-price red-btn" href="#">15500 р.</a>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="" alt="" class="catalog-item-img">
+                        <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+                        <span class="goods-old-price">30500 р.</span>
+                        <a class="catalog-item-price red-btn" href="#">25500 р.</a>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="" alt="" class="catalog-item-img">
+                        <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+                        <span class="goods-old-price"></span>
+                        <a class="catalog-item-price red-btn" href="#">12500 р.</a>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="" alt="" class="catalog-item-img">
+                        <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+                        <span class="goods-old-price">22500 р.</span>
+                        <a class="catalog-item-price red-btn" href="#">15500 р.</a>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="" alt="" class="catalog-item-img">
+                        <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+                        <span class="goods-old-price">30500 р.</span>
+                        <a class="catalog-item-price red-btn" href="#">25500 р.</a>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="" alt="" class="catalog-item-img">
+                        <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+                        <span class="goods-old-price"></span>
+                        <a class="catalog-item-price red-btn" href="#">12500 р.</a>
+                    </div>
+                </li>
             </ul>
-            <section class="catalog">
-                <h2 class="catalog-name">перфораторы</h2>
-                <div class="catalog-filter">
-                    <form action="get">
-                        <strong>фильтр:</strong>
-                        <b>цена:</b>
-                        <input type="range">
-                        <b>производители:</b>
-                        <input type="checkbox">bosch</label>
-                        <input type="checkbox">интерскол</label>
-                        <input type="checkbox">makita</label>
-                        <input type="checkbox">dewalt</label>
-                        <input type="checkbox">hitachi</label>
-                        <b>питание:</b>
-                        <input type="radio" name="radio">аккумуляторные</label>
-                        <input type="radio" name="radio">сетевые</label>
-                        <input type="submit" name="submit" id="submit" value="показать">
-                    </form>
-                </div>
-                <div class="catalog-sort"></div>
-                <ul class="catalog-goods">
-                    <li class="catalog-item">
-                        <div>
-                            <div class="new-label"></div>
-                            <img src="" alt="" class="catalog-item-img">
-                            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-                            <span class="old-price">22500 р.</span>
-                            <button class="catalog-item-price">15500 р.</button>
-                        </div>
-                    </li>
-                    <li class="catalog-item">
-                        <div>
-                            <div class="new-label"></div>
-                            <img src="" alt="" class="catalog-item-img">
-                            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-                            <span class="old-price">30500 р.</span>
-                            <button class="catalog-item-price">25500 р.</button>
-                        </div>
-                    </li>
-                    <li class="catalog-item">
-                        <div>
-                            <div class="new-label"></div>
-                            <img src="" alt="" class="catalog-item-img">
-                            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-                            <span class="old-price"></span>
-                            <button class="catalog-item-price">12500 р.</button>
-                        </div>
-                    </li>
-                    <li class="catalog-item">
-                        <div>
-                            <div class="new-label"></div>
-                            <img src="" alt="" class="catalog-item-img">
-                            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-                            <span class="old-price">22500 р.</span>
-                            <button class="catalog-item-price">15500 р.</button>
-                        </div>
-                    </li>
-                    <li class="catalog-item">
-                        <div>
-                            <div class="new-label"></div>
-                            <img src="" alt="" class="catalog-item-img">
-                            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-                            <span class="old-price">30500 р.</span>
-                            <button class="catalog-item-price">25500 р.</button>
-                        </div>
-                    </li>
-                    <li class="catalog-item">
-                        <div>
-                            <div class="new-label"></div>
-                            <img src="" alt="" class="catalog-item-img">
-                            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-                            <span class="old-price"></span>
-                            <button class="catalog-item-price">12500 р.</button>
-                        </div>
-                    </li>
-                    <li class="catalog-item">
-                        <div>
-                            <div class="new-label"></div>
-                            <img src="" alt="" class="catalog-item-img">
-                            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-                            <span class="old-price">22500 р.</span>
-                            <button class="catalog-item-price">15500 р.</button>
-                        </div>
-                    </li>
-                    <li class="catalog-item">
-                        <div>
-                            <div class="new-label"></div>
-                            <img src="" alt="" class="catalog-item-img">
-                            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-                            <span class="old-price">30500 р.</span>
-                            <button class="catalog-item-price">25500 р.</button>
-                        </div>
-                    </li>
-                    <li class="catalog-item">
-                        <div>
-                            <div class="new-label"></div>
-                            <img src="" alt="" class="catalog-item-img">
-                            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-                            <span class="old-price"></span>
-                            <button class="catalog-item-price">12500 р.</button>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            
-        <footer>
-            <div class="footer-top">
-                <div>
-                    <a class="footer-logo" href=""></a>
-                    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-                </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-top">
+            <div>
+                <a class="footer-logo" href=""></a>
                 <nav class="footer-nav">
                     <ul>
                         <li><a href="">Компания</a></li>
@@ -168,25 +158,28 @@
                         <li><a href="">Каталог</a></li>
                         <li><a href="">Доставка</a></li>
                         <li><a href="">Контакты</a></li>
-                        <li><a href="">Материалы</a></li>
-                        <li><a href="">Техника</a></li>
-                        <li><a href="">Инструмент</a></li>
-                        <li><a href="">Спецпредложения</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="footer-bot">
-                <p class="copyright">2010-2019 Компания "Техномарт"<br>Все права защищены</p>
-                <p class="footer-socials">
-                    <a href="#" title="ВКонтакте"></a>
-                    <a href="#" title="Facebook"></a>
-                    <a href="#" title="Instagram"></a>
-                </p>
-                <p class="footer-mail">Обратная связь:<br> <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-                <p class="footer-academy">Разработано -<br><a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
-            </div>
-        </footer>
-    </header>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+            <ul class="footer-proposal">
+                <li><a href="">Материалы</a></li>
+                <li><a href="">Техника</a></li>
+                <li><a href="">Инструмент</a></li>
+                <li><a href="">Спецпредложения</a></li>
+            </ul>
+        </div>
+        <div class="footer-bot">
+            <p class="copyright">2010-2019 Компания "Техномарт"<br>Все права защищены</p>
+            <p class="footer-socials">
+                <a href="#" title="ВКонтакте"></a>
+                <a href="#" title="Facebook"></a>
+                <a href="#" title="Instagram"></a>
+            </p>
+            <p class="footer-mail">Обратная связь:<br> <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+            <p class="footer-academy">Разработано -<br><a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
