--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			<div class="about-contacts">
 				<p>контакты</p>
 				<p>Вы можете забрать товар сами, заехав в наш офис:</p>
-				<div class="about-map"><a href="#"></a></div>
+				<a href="#"><img src="img/find-us-map_300x158.jpg" width="300" height="158" alt="Схема подъезда"></a>
 				<a class="red-btn" href="#">заблудились? напишите нам</a>
 			</div>
 		</section>
