--- a/catalog.html
+++ b/catalog.html
@@ -73,55 +73,55 @@
             <div class="catalog-sort"></div>
             <ul class="catalog-goods">
                 <li class="catalog-item">
-                    <img src="" alt="" class="catalog-item-img">
+                    <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
                     <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
                     <span class="goods-old-price">22500 р.</span>
                     <a class="catalog-item-price red-btn" href="#">15500 р.</a>
                 </li>
                 <li class="catalog-item">
-                    <img src="" alt="" class="catalog-item-img">
+                    <img src="img/Perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
                     <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
                     <span class="goods-old-price">30500 р.</span>
                     <a class="catalog-item-price red-btn" href="#">25500 р.</a>
                 </li>
                 <li class="catalog-item">
-                    <img src="" alt="" class="catalog-item-img">
+                    <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
                     <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
                     <span class="goods-old-price"></span>
                     <a class="catalog-item-price red-btn" href="#">12500 р.</a>
                 </li>
                 <li class="catalog-item">
-                    <img src="" alt="" class="catalog-item-img">
+                    <img src="img/Perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
                     <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
                     <span class="goods-old-price">22500 р.</span>
                     <a class="catalog-item-price red-btn" href="#">15500 р.</a>
                 </li>
                 <li class="catalog-item">
-                    <img src="" alt="" class="catalog-item-img">
+                    <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
                     <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
                     <span class="goods-old-price">30500 р.</span>
                     <a class="catalog-item-price red-btn" href="#">25500 р.</a>
                 </li>
                 <li class="catalog-item">
-                    <img src="" alt="" class="catalog-item-img">
+                    <img src="img/Perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
                     <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
                     <span class="goods-old-price"></span>
                     <a class="catalog-item-price red-btn" href="#">12500 р.</a>
                 </li>
                 <li class="catalog-item">
-                    <img src="" alt="" class="catalog-item-img">
+                    <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
                     <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
                     <span class="goods-old-price">22500 р.</span>
                     <a class="catalog-item-price red-btn" href="#">15500 р.</a>
                 </li>
                 <li class="catalog-item">
-                    <img src="" alt="" class="catalog-item-img">
+                    <img src="img/Perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
                     <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
                     <span class="goods-old-price">30500 р.</span>
                     <a class="catalog-item-price red-btn" href="#">25500 р.</a>
                 </li>
                 <li class="catalog-item">
-                    <img src="" alt="" class="catalog-item-img">
+                    <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
                     <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
                     <span class="goods-old-price"></span>
                     <a class="catalog-item-price red-btn" href="#">12500 р.</a>
