--- a/catalog.html
+++ b/catalog.html
@@ -143,7 +143,7 @@
                     </ul>
                 </nav>
             </div>
-            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
             <ul class="footer-proposal">
                 <li><a href="">Материалы</a></li>
                 <li><a href="">Техника</a></li>
@@ -152,14 +152,14 @@
             </ul>
         </div>
         <div class="footer-bot">
-            <p class="copyright">2010-2019 Компания "Техномарт"<br>Все права защищены</p>
+            <p class="copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
             <p class="footer-socials">
                 <a href="#" title="ВКонтакте"></a>
                 <a href="#" title="Facebook"></a>
                 <a href="#" title="Instagram"></a>
             </p>
-            <p class="footer-mail">Обратная связь:<br> <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-            <p class="footer-academy">Разработано -<br><a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+            <p class="footer-mail">Обратная связь: <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+            <p class="footer-academy">Разработано -<a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
         </div>
     </footer>
 </body>
