--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div class="header-top">
-			<a class="logo" href="#">техномарт</a>
+			<a class="logo" href="index.html" title="Обновить страницу">техномарт</a>
 			<input type="text" name="main-search" value="Поиск:">
 			<a class="header-top-btn btn-bookmarks" href="#">Закладки: 0</a>
 			<a class="header-top-btn btn-cart" href="#">Корзина: 0</a>
@@ -18,7 +18,7 @@
 		<div class="header-mid">
 			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 			<div class="header-contacts">
-				<a class="header-tel" href="tel:+78125550555">+7 (812) 555-05-55
+				<a class="header-tel" href="tel:+78125550555" title="Позвонить нам">+7 (812) 555-05-55
 				</a>
 				<p class="header-adress">
 					г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
@@ -33,7 +33,7 @@
 			<nav class="main-nav">
 				<ul>
 					<li class="main-nav-item"><a href="#">Главная</a></li>
-					<li class="main-nav-item"><a href="#">Каталог</a></li>
+					<li class="main-nav-item"><a href="catalog.html">Каталог</a></li>
 					<li class="main-nav-item"><a href="#">Компания</a></li>
 					<li class="main-nav-item"><a href="#">Новости</a></li>
 					<li class="main-nav-item"><a href="#">Спецпредложения</a></li>
@@ -188,7 +188,7 @@
 	<footer>
 		<div class="footer-top">
 			<div>
-				<a class="footer-logo" href=""></a>
+				<a class="footer-logo" href="#" title="В начало страницы"></a>
 				<nav class="footer-nav">
 					<ul>
 						<li><a href="">Компания</a></li>
@@ -210,14 +210,38 @@
 		<div class="footer-bot">
 			<p class="copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
 			<p class="footer-socials">
-				<a href="#" title="ВКонтакте"></a>
-				<a href="#" title="Facebook"></a>
-				<a href="#" title="Instagram"></a>
+                <a href="#" title="Мы во ВКонтакте"><span class="visually-hidden">Мы во ВКонтакте</span></a>
+                <a href="#" title="Мы на Фейсбук"><span class="visually-hidden">Мы на Фейсбук</span></a>
+                <a href="#" title="Мы в Инстаграм"><span class="visually-hidden">Мы в Инстаграм</span></a>
 			</p>
 			<p class="footer-mail">Обратная связь: <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
 			<p class="footer-academy">Разработано -<a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
 		</div>
 	</footer>
+	<div class="popup popup-map">
+			<h2 class="visually-hidden">Как к нам попасть</h2>
+		<a href="www.maps.google.com"><img src="img/popup-map.jpg" width="970" height="476" alt="Наш адрес: Санкт-петербург, улица большая конюшенная, дом 19"></a>
+		<button class="popup-close-btn popup-close-btn-map"><span>закрыть</span></button>
+	</div>
+	<div class="popup popup-write-us">
+		<form class="write-us" action="https://echo.htmlacademy.ru">
+			<h2 class="visually-hidden">Напишите нам электронное письмо</h2>
+			<p>
+				<label for="write-us-name">Ваше имя:</label>
+				<input type="text" name="write-us-name" id="write-us-name" placeholder="Имя Фамилия" required>
+			</p>
+			<p>
+				<label for="write-us-mail">Ваш e-mail:</label>
+				<input type="text" name="write-us-mail" id="write-us-mail" placeholder="email@example.com" required>
+			</p>
+			<p>
+				<label for="write-us-text">Текст письма:</label>
+				<textarea rows="5" name="write-us-text" id="write-us-text" placeholder="В свободной форме" required></textarea>
+			</p>
+			<button type="submit">отправить</button>
+			<button class="popup-close-btn popup-close-btn-write-us"><span>закрыть</span></button>
+		</form>
+	</div>
 </body>
 
 </html>
