--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Техномарт - Каталог товаров</title>
 </head>
@@ -24,9 +25,9 @@
         </p>
       </div>
       <ul class="user-menu">
-        <li><a class="user-profile" href="#">Равшан Джамшутович</a><a class="user-logout" href="#" title="Выход"></a></li>
-        <li><a href="#">Мои заказы</a></li>
-        <li><a href="#">Личный кабинет</a></li>
+        <li class="user-menu-item"><a class="user-menu-item-profile" href="#">Равшан Джамшутович</a><a class="user-logout" href="#" title="Выход"></a></li>
+        <li class="user-menu-item"><a class="user-menu-item-orders" href="#">Мои заказы</a></li>
+        <li class="user-menu-item"><a class="user-menu-item-control-panel" href="#">Личный кабинет</a></li>
       </ul>
     </div>
     <div class="header-bot">
