--- a/catalog.html
+++ b/catalog.html
@@ -55,12 +55,12 @@
       <h2 class="catalog-name">перфораторы</h2>
       <div class="catalog-filter">
         <form action="https://echo.htmlacademy.ru">
-          <strong>фильтр:</strong>
-          <fieldset>
+          <strong class="catalog-filter-title">фильтр:</strong>
+          <fieldset class="catalog-filter-price">
             <legend>цена:</legend>
             <input type="range">
           </fieldset>
-          <fieldset>
+          <fieldset class="catalog-filter-brand">
             <legend>производители:</legend>
             <input type="checkbox" name="checkbox-bosch" id="checkbox-bosch" checked><label for="checkbox-bosch">bosch</label>
             <input type="checkbox" name="checkbox-interscol" id="checkbox-interscol"><label for="checkbox-interscol">интерскол</label>
@@ -68,7 +68,7 @@
             <input type="checkbox" name="checkbox-dewalt" id="checkbox-dewalt"><label for="checkbox-dewalt">dewalt</label>
             <input type="checkbox" name="checkbox-hitachi" id="checkbox-hitachi"><label for="checkbox-hitachi">hitachi</label>
           </fieldset>
-          <fieldset>
+          <fieldset class="catalog-filter-power">
             <legend>питание:</legend>
             <input type="radio" name="radio-accumulators" id="radio-accumulators" checked><label for="radio-accumulators">аккумуляторные</label>
             <input type="radio" name="radio-wired" id="radio-wired"><label for="radio-wired">сетевые</label>
@@ -138,27 +138,27 @@
   <footer>
     <div class="footer-top">
       <div>
-        <a class="footer-logo" href="index.html" title="На главную страницу"></a>
+        <a class="footer-logo" href="#" title="В начало страницы"></a>
         <nav class="footer-nav">
-          <ul>
-            <li><a href="">Компания</a></li>
-            <li><a href="">Новости</a></li>
-            <li><a href="">Каталог</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакты</a></li>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item"><a href="#">Компания</a></li>
+            <li class="footer-nav-item"><a href="#">Новости</a></li>
+            <li class="footer-nav-item"><a href="catalog.html">Каталог</a></li>
+            <li class="footer-nav-item"><a href="#">Доставка</a></li>
+            <li class="footer-nav-item"><a href="#">Контакты</a></li>
           </ul>
         </nav>
       </div>
       <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-      <ul class="footer-proposal">
-        <li><a href="">Материалы</a></li>
-        <li><a href="">Техника</a></li>
-        <li><a href="">Инструмент</a></li>
-        <li><a href="">Спецпредложения</a></li>
+      <ul class="footer-proposal-list">
+        <li class="footer-proposal-item"><a href="#">Материалы</a></li>
+        <li class="footer-proposal-item"><a href="#">Техника</a></li>
+        <li class="footer-proposal-item"><a href="#">Инструмент</a></li>
+        <li class="footer-proposal-item"><a href="#">Спецпредложения</a></li>
       </ul>
     </div>
     <div class="footer-bot">
-      <p class="copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
+      <p class="footer-copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
       <p class="footer-socials">
         <a href="#" title="Мы во ВКонтакте"><span class="visually-hidden">Мы во ВКонтакте</span></a>
         <a href="#" title="Мы на Фейсбук"><span class="visually-hidden">Мы на Фейсбук</span></a>
