--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
           <img src="http://placehold.it/150x100" alt="BFG 9000">
           <h3>Перфоратор BOSCH 9000</h3>
           <span class="goods-old-price">32500 р.</span>
-          <a class="popular-goods-btn red-btn" href="#"></a>
+          <a class="popular-goods-price red-btn" href="#">25500 р.</a>
         </li>
         <li class="popular-goods-item">
           <img src="http://placehold.it/150x100" alt="BFG 3000">
           <h3>Перфоратор BOSCH 3000</h3>
           <span class="goods-old-price">22500 р.</span>
-          <a class="popular-goods-btn red-btn" href="#"></a>
+          <a class="popular-goods-price red-btn" href="#">15500 р.</a>
         </li>
         <li class="popular-goods-item">
           <img src="http://placehold.it/150x100" alt="BFG 6000">
           <h3>Перфоратор BOSCH 6000</h3>
           <span class="goods-old-price">30500 р.</span>
-          <a class="popular-goods-btn red-btn" href="#"></a>
+          <a class="popular-goods-price red-btn" href="#">25500 р.</a>
         </li>
         <li class="popular-goods-item">
           <img src="http://placehold.it/150x100" alt="BFG 2000">
           <h3>Перфоратор BOSCH 2000</h3>
           <span class="goods-old-price"></span>
-          <a class="popular-goods-btn red-btn" href="#"></a>
+          <a class="popular-goods-price red-btn" href="#">12500 р.</a>
         </li>
       </ul>
     </section>
@@ -172,9 +172,9 @@
           Мы можем доставить ваш товар в самые отдаленные точки России!
           Техномарт работает со многими транспортными компаниями: </p>
         <ul class="partners-list">
-          <li class="partners-item">Деловые линии</li>
-          <li class="partners-item">Автотрейдинг</li>
-          <li class="partners-item">ЖелДорЭкспедиция</li>
+          <li class="partners-list-item">Деловые линии</li>
+          <li class="partners-list-item">Автотрейдинг</li>
+          <li class="partners-list-item">ЖелДорЭкспедиция</li>
         </ul>
         <a class="red-btn" href="#">подробнее о компании</a>
       </div>
@@ -191,25 +191,25 @@
       <div>
         <a class="footer-logo" href="#" title="В начало страницы"></a>
         <nav class="footer-nav">
-          <ul>
-            <li><a href="">Компания</a></li>
-            <li><a href="">Новости</a></li>
-            <li><a href="">Каталог</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакты</a></li>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item"><a href="#">Компания</a></li>
+            <li class="footer-nav-item"><a href="#">Новости</a></li>
+            <li class="footer-nav-item"><a href="catalog.html">Каталог</a></li>
+            <li class="footer-nav-item"><a href="#">Доставка</a></li>
+            <li class="footer-nav-item"><a href="#">Контакты</a></li>
           </ul>
         </nav>
       </div>
       <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-      <ul class="footer-proposal">
-        <li><a href="">Материалы</a></li>
-        <li><a href="">Техника</a></li>
-        <li><a href="">Инструмент</a></li>
-        <li><a href="">Спецпредложения</a></li>
+      <ul class="footer-proposal-list">
+        <li class="footer-proposal-item"><a href="#">Материалы</a></li>
+        <li class="footer-proposal-item"><a href="#">Техника</a></li>
+        <li class="footer-proposal-item"><a href="#">Инструмент</a></li>
+        <li class="footer-proposal-item"><a href="#">Спецпредложения</a></li>
       </ul>
     </div>
     <div class="footer-bot">
-      <p class="copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
+      <p class="footer-copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
       <p class="footer-socials">
         <a href="#" title="Мы во ВКонтакте"><span class="visually-hidden">Мы во ВКонтакте</span></a>
         <a href="#" title="Мы на Фейсбук"><span class="visually-hidden">Мы на Фейсбук</span></a>
